force-app/main/default/objects/AAKCS__Campaign_Status_Default_Value__c/AAKCS__Campaign_Status_Default_Value__c.object-meta.xml
<CustomObject>
    <label>Campaign Member Status Default Value</label>
    <nameField>
        <label>Campaign Member Status</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Member Status Default Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>