force-app/main/default/objects/AAKCS__Campaign_Status_Default_Value__c/fields/AAKCS__Campaign_Status_Default__c.field-meta.xml
<CustomField>
    <fullName>AAKCS__Campaign_Status_Default__c</fullName>
    <label>Campaign Status Default</label>
    <referenceTo>AAKCS__Campaign_Status_Default__c</referenceTo>
    <relationshipName>Campaign_Status_Default_Values</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>