force-app/main/default/objects/AAKCS__Campaign_Status_Default_Value__c/fields/AAKCS__Default__c.field-meta.xml
<CustomField>
    <fullName>AAKCS__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this if this status is the default campaign member status.  This value will be assigned to the campaign status &quot;Default&quot; value.  Please ensure that only one Campaign Status Default value is selected  for the set of detaults.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>