force-app/main/default/objects/AAKCS__Campaign_Status_Default_Value__c/fields/AAKCS__Responded__c.field-meta.xml
<CustomField>
    <fullName>AAKCS__Responded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this if this status indicated that a campaign member has responded.  This value will be assigned to the campaign status &quot;Responded&quot; value.</inlineHelpText>
    <label>Responded</label>
    <type>Checkbox</type>
</CustomField>