force-app/main/default/objects/AAKCS__Campaign_Status_Default_Value__c/fields/AAKCS__Sequence__c.field-meta.xml
<CustomField>
    <fullName>AAKCS__Sequence__c</fullName>
    <inlineHelpText>Enter a sequence number in which the order of the status&apos;s will be applied.
NOTE: The squence order will only be applied to added status&apos;s to the individual campaign, even if the action is Replace All.</inlineHelpText>
    <label>Sequence</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>