force-app/main/default/objects/AAKCS__Campaign_Status_Default_Value__c/validationRules/AAKCS__Check_length_of_status.validationRule-meta.xml
<ValidationRule>
    <fullName>AAKCS__Check_length_of_status</fullName>
    <active>true</active>
    <description>As the custom object field can be upto 80, but the status field can only be upto 40 then this validation rule ensures the 40 character limit is not broken.</description>
    <errorConditionFormula>LEN(Name)&gt;40</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Status can be a maximum of 40 characters</errorMessage>
</ValidationRule>